<resources>
    <string name="app_name">KonversiMataUang</string>
    <string name="about_app">About</string>
    <string name="mulai">Start</string>
    <string name="awal">Aplikasi Konversi Mata Uang Dari IDR ke USD</string>
    <string name="idr">IDR:</string>
    <string name="usd">IDR -> USD</string>
    <string name="hasil"> Hasil: %1$.10f </string>
    <string name="idr_kosong">Tidak Boleh Kosong!</string>
    <string name="data">Data Konversi Uang</string>
    <string name="negara">Berikut adalah Data Konversi Uang Negara</string>
    <string name="idr_usd">Rupiah Indonesia Ke Dolar Amerika = 1 IDR -> 0,000069 USD \nDolar Amerika Ke Rupiah Indonesia= 1 USD -> 14.471 IDR</string>
    <string name="about">Konversi Uang merupakan sebuah aplikasi Android untuk
        menghitung konversi uang dari Rupiah Indonesia ke Dolar Amerika</string>
    <string name="apk">Tentang Aplikasi</string>
    <string name="konversiii">Konversi : %100$s</string>
    <string name="idrusd">Indonesia Rupiah -> Dolar Amerika </string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Idr: %1$s \nKonversi: %2$s \n %3$s</string>
    <string name="koneksi_error">Koneksi error</string>
</resources>